edge/disease.sh.ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: disease.sh.ingress
  namespace: edge
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "https"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_cache api;
      proxy_cache_valid 404 1m;
      proxy_cache_use_stale error timeout updating http_404 http_500 http_502 http_503 http_504;
      proxy_set_header Host $host;
      proxy_cache_bypass $http_x_purge;
      add_header GM-Cache-Status $upstream_cache_status;
spec:
  tls:
    - hosts: 
      - disease.sh
      secretName: disease.sh
  rules:
    - host: disease.sh
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: disease
              servicePort: 8443
          - path: /assets(.*)
            backend:
              serviceName: disease
              servicePort: 8443
